# valistr

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: example.rs  readme.rs
examples/example_crates/no-direct-regex-dep/: Cargo.toml
examples/example_crates/no-direct-regex-dep/src/: main.rs
src/: lib.rs  main.rs
valistr_proc_macro/: Cargo.toml
valistr_proc_macro/src/: lib.rs  utils.rs
