[package]
name = "valistr_proc_macro"
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
include.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
# proc-macro-crate = "3.1"
regex = "1.10"
