[package]
name = "valistr_proc_macro"
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
repository.workspace = true
include.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "3.4"
regex.workspace = true
indexmap.workspace = true
